# esp32-dimmer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  package.json  webpack.config.js
components/duktape-esp32-main/: module_ssl.c
filesystem/: index.html
main/: lightbulb.c  lightbulb.h  main.c  wifi.c  wifi.h
web-fs/: index.html  manifest.json
web-src/: index.html  main.jsx
